# somos-py

./: .bumpversion.cfg  .pre-commit-config.yaml  .readthedocs.yaml  404.html  CHANGELOG.md  INSTALL.md  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: build.yml  docs.yml  jekyll-gh-pages.yml  readthedocs.yml
docs/: 404.html  index.html  index.md
search/: search_index.json
site/: 404.html
somos/: __init__.py  somos.py
src/docs/: index.md
